# clazzy

./: .gitignore  CMakeLists.txt  CODING_STYLE  COPYING  INSTALL  LICENSE  Makefile  Makefile.build  Makefile.depend  README  README.md  clean.sh  compile.sh  mk_lang.sh
doc/man/: clazzy.1
examples/: generics.txt  getset.txt  person_vs_nagger.txt  simple.txt
libclazzy/: AccessLevel.h  Argument.cpp  Argument.h  Class.cpp  Class.h  DesignPattern.cpp  DesignPattern.h  Member.cpp  Member.h  Method.cpp  Method.h  Type.cpp  Type.h  io_helpers.cpp  io_helpers.h  string_helpers.cpp  string_helpers.h
scripts/: mk_lang.sh  set_version.sh
src/: accessible.cpp  callable.cpp  class_component.cpp  class_component.h  class_def.cpp  class_def.h  clazzy.cpp  clazzy.h  clazzy.lex  constructor.cpp  cranberry.lex  declarable.cpp  design_pattern.cpp  design_pattern.h  function.cpp  io_functions.cpp  lang_c.cpp  lang_c_style.cpp  lang_cpp.cpp  lang_java.cpp  lang_java.h  lang_python.cpp  lang_python.h  language.cpp  language.h  language_factory.cpp  language_factory.h  lex.yy.cpp  member.cpp  method.cpp  method.h  parameterized.cpp  parser.cpp  parser.h  string_functions.cpp  string_functions.h  token.h  type.h  type_convertor.cpp  type_hint.cpp  (+4 more)
src/h/: access_type.h  accessible.h  callable.h  class_def.h  constructor.h  declarable.h  design_pattern.h  function.h  io_functions.h  lang_c.h  lang_c_style.h  lang_cpp.h  lang_java.h  lang_python.h  language.h  language_factory.h  language_includes.h  member.h  method.h  parameterized.h  parser.h  token.h  type.h  type_convertor.h  type_hint.h  type_util.h  validator.h  version.h
test/: Makefile  simple_test.cpp
